# vhagar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.bat  tags
Engine/: .gitignore  CMakeLists.txt
Engine/Include/: Vhagar.hpp
Engine/Source/: CMakeLists.txt  Common.hpp  Vhagar_PCH.cpp  Vhagar_PCH.hpp
Engine/Source/Actor/: Actor.cpp  Actor.hpp  ActorBehavior.cpp  ActorBehavior.hpp  ActorFactory.cpp  ActorFactory.hpp  CameraActor.cpp  CameraActor.hpp  CameraBehavior.cpp  CameraBehavior.hpp  ControlBehavior.hpp  Controllable.cpp  Controllable.hpp  DirectionalLightActor.cpp  DirectionalLightActor.hpp  FreeFloating.hpp  FreeFloatingBehavior.hpp  PointLight.cpp  PointLight.hpp  PointLightActor.cpp  PointLightActor.hpp  StaticMeshActor.cpp  StaticMeshActor.hpp
Engine/Source/App/: App.cpp  App.hpp  Application.cpp__  Application__.hpp_  Arm.hpp  Component.cpp  Component.hpp  Controllable.hpp  Level.hpp  PlayerController.cpp  PlayerController.hpp  World.cpp  World.hpp
Engine/Source/Console/: Console.cpp  Console.hpp  ConsoleCommands.cpp  ConsoleCommands.hpp  ConsoleEngine.cpp  ConsoleEngine.hpp  RemoteConsoleServer.cpp  RemoteConsoleServer.hpp
Engine/Source/Core/: ActorBehavior.cpp  ActorBehavior.hpp  ActorFactory.hpp  App.cpp  Component.cpp  Component.hpp  Factory.hpp  VhCore_PCH.cpp  VhCore_PCH.hpp  standard.hpp
Engine/Source/Debug/: Debug.cpp  Debug.hpp  DebugVisual.cpp  DebugVisual.hpp  TextOverlay.cpp  TextOverlay.hpp
Engine/Source/GUI2D/: ButtonWidget.cpp  ButtonWidget.hpp  GUI2D.cpp  GUI2D.hpp  ImageWidget.cpp  ImageWidget.hpp  TextFieldWidget.cpp  TextFieldWidget.hpp  TextWidget.cpp  TextWidget.hpp  View.cpp  View.hpp  Widget.cpp  Widget.hpp
Engine/Source/Geometry/: Geometry.cpp  Geometry.hpp
Engine/Source/LivePP/: LivePP.cpp  LivePP.hpp  LivePPComponent.cpp
Engine/Source/Math/: Math.cpp  Math.hpp  Rot.hpp
Engine/Source/Modules/: VhModules_PCH.cpp  VhModules_PCH.hpp  standard.hpp
Engine/Source/Network/: Network.cpp  Network.hpp  Poll.hpp  Socket.cpp  TcpServer.cpp  TcpServer.hpp  net.cpp  net.hpp
Engine/Source/Physics/: CapsuleCharacterBehavior.cpp  CapsuleCharacterBehavior.hpp  Geometry.hpp  Physics.cpp  Physics.hpp  PhysicsBehavior.cpp  PhysicsBehavior.hpp
Engine/Source/Renderable/: Lights.hpp  Mesh.cpp  Mesh.hpp  Overlay.cpp  Overlay.hpp  Renderable.cpp  Renderable.hpp  RenderableBehavior.cpp  RenderableBehavior.hpp  SkyBox.cpp  SkyBox.hpp
Engine/Source/RenderableBehavior/: MeshBehavior.cpp  MeshBehavior.hpp  PointLightBehavior.cpp  PointLightBehavior.hpp  SkyBoxBehavior.cpp
Engine/Source/Renderer/: Light.hpp  LightSource.hpp  Lights.hpp  MeshBehavior.cpp  MeshBehavior.hpp  PointLight.hpp  PointLightBehavior.cpp  PointLightBehavior.hpp  RenderBuffer.hpp  RenderBuffersHandler.cpp  Renderer.cpp  Renderer.hpp  SDLRenderer.cpp  SDLRenderer.hpp  SkyBoxBehavior.cpp  SkyBoxBehavior.hpp
Engine/Source/Renderer2D/: Renderer2D.cpp  Renderer2D.hpp
Engine/Source/Resource/: ReadWrite.hpp  Resource.hpp  ResourceSystem.cpp  ResourceSystem.hpp
Engine/Source/Shaders/: Flow_FS.glsl  Flow_VS.glsl  OSD_VS.glsl  Shaders.hpp  SimpleShader4_VS.glsl  SimpleShader_FS.glsl  SimpleShader_VS.glsl  SkyDome_FS.glsl  SkyDome_VS.glsl  Wireframe_FS.glsl  Wireframe_VS.glsl
Engine/Source/Utils/: CritSection.cpp  CritSection.hpp  CritSection_UNIX.hpp  CritSection_WINDOWS.hpp  Defs.hpp  Delegate.hpp  Factory.hpp  FileSystem.cpp  FileSystem.hpp  GLUtils.cpp  GLUtils.hpp  ImportUtils.cpp  ImportUtils.hpp  Logging.hpp  Math.cpp  Math.hpp  PhysXUtils.cpp  PhysXUtils.hpp  Property.hpp  Thread.cpp  Thread.hpp  Thread_UNIX.hpp  Thread_WINDOWS.hpp  VhUtils_PCH.cpp  VhUtils_PCH.hpp  standard.hpp
RockBandTycoon/: CMakeLists.txt  main.cpp
RockBandTycoon/Assets/: bass.txt  guitar.txt  items.txt  names.dict
RockBandTycoon/Source/: GameProfile.cpp  GameProfile.hpp  PCH.cpp  PCH.hpp  main.cpp
RockBandTycoon/Source/Components/: BodyParts.cpp  BodyParts.hpp  Names.cpp  Names.hpp  Resources.cpp  Resources.hpp
RockBandTycoon/Source/Debug/: DebugCommands.cpp  DebugCommands.hpp
RockBandTycoon/Source/Gameplay/: BandMember.hpp  BandSlot.hpp  BodyParts.hpp  EventItem.hpp  GameProfile.cpp  GameProfile.hpp  GameScript.cpp  GameScript.hpp  HireItem.hpp  Item.hpp  Looks.hpp  Names.cpp  Names.hpp  ScriptStates.hpp  Shop.cpp  Shop.hpp  ShopItem.hpp
RockBandTycoon/Source/Views/: DialogView.cpp  DialogView.hpp  EventsView.cpp  EventsView.hpp  GameView.cpp  GameView.hpp  HireView.cpp  HireView.hpp  MenuView.cpp  MenuView.hpp  NewGameView.cpp  NewGameView.hpp  ShopView.cpp  ShopView.hpp  WaitDialogView.hpp
RockBandTycoon/Source/Widgets/: BandMemberAdWidget.cpp  (+15 more)
Vhagar/: CMakeLists.txt  Common.hpp
Vhagar/LightSource/: LightSource.hpp
Vhagar/Renderer/: GLUtils.cpp  GLUtils.hpp  Renderer.cpp  Renderer.hpp
Vhagar/RenderingObject/: Mesh.cpp  Mesh.hpp  ObjMesh.cpp  RenderingObject.hpp  SkyBox.cpp  SkyBox.hpp
Vhagar/Shaders/: OSD_VS.glsl  Shaders.hpp  SimpleShader_FS.glsl  SimpleShader_VS.glsl  SkyDome_FS.glsl
Vhagar/UI/: UITexture.cpp  UITexture.hpp
engine/: CMakeLists.txt  main.cpp
engine/core/: Application.cpp  Application.hpp  Controllable.hpp  Object.hpp  PlayerController.hpp  Utils.cpp  Utils.hpp
engine/render/: GL3Renderer.cpp  GL3Renderer.hpp  GLUtils.cpp  GLUtils.hpp  Mesh.hpp
engine/scenes/: SpaceScene.cpp
engine/shaders/: Shaders.hpp  SkyDome_FS.glsl
src/: CMakeLists.txt  GameEngine  main.cpp
src/core/: Application.cpp  Application.hpp  Arm.hpp  Camera.cpp  Camera.hpp  Common.hpp  Controllable.hpp  Drawable.hpp  Object.cpp  Object.hpp  PlayerController.cpp  PlayerController.hpp  Scene.cpp  Scene.hpp
src/drawable/: Box.cpp  Box.hpp  Drawable.hpp  Wavefront.cpp  Wavefront.hpp
src/objects/: Wavefront.hpp
src/render/: GL3Renderer.cpp  GL3Renderer.hpp  GLUtils.cpp  GLUtils.hpp  Mesh.hpp  ObjMesh.cpp  Renderer.hpp
src/scenes/: SpaceScene.cpp  SpaceScene.hpp
src/shader/: FragmentShader.glsl  VertexShader.glsl
src/shaders/: SimpleShader_FS.glsl  SimpleShader_VS.glsl  SkyDome_FS.glsl  SkyDome_VS.glsl
test-game/: CMakeLists.txt  test-game.cpp
(+283 files in other folders)
